@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-19T01:21:35Z",
-  "count" : 3,
+  "timestamp" : "2022-07-02T08:17:55Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
