@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-02T01:19:01Z",
+  "timestamp" : "2022-07-02T08:17:55Z",
   "count_outdated" : 366,
   "uniques_outdated" : 210,
-  "count" : 393,
+  "count" : 392,
   "uniques" : 226,
   "clones" : [
     {
       "timestamp": "2022-06-18T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
