@@ -1,10 +1,10 @@
 {
-  "count": 27,
+  "count": 26,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-06-18T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
