@@ -1,3 +1,10 @@
+2022-07-02T08:17:55Z:
+* notice: last 14d: unq all: 4 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 210 366 / 226 393
+* notice: next accum: outdated-unq outdated-all / unq all: 210 366 / 226 392
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
+* notice: removed / changed dates: [] / [2022-06-18]
+
 2022-07-02T01:19:01Z:
 * notice: last 14d: unq all: 4 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 210 366 / 226 392
